####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = glui

## INCLUDES were found outside kdevelop specific part

glui_SOURCES = Vector.cpp Texture.cpp main.cpp GLUIWindow.cpp GLUIScrollWindow.cpp GLUILabel.cpp GLUIApp.cpp GLUI2D.cpp App_Log.cpp 
glui_LDADD   = -lSDL_image


EXTRA_DIST = App_Log.cpp App_Log.h GLUI2D.cpp GLUI2D.h GLUIApp.cpp GLUIApp.h GLUIControl.h GLUI.h GLUILabel.cpp GLUILabel.h GLUIObject.h GLUIScrollWindow.cpp GLUIScrollWindow.h GLUIWindow.cpp GLUIWindow.h main.cpp Texture.cpp Texture.h Vector.cpp Vector.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
glui_LDFLAGS = $(all_libraries) 
                                                                                
